Added handlers for messages
